<resources>
    <string name="app_name">Global Finance</string>
    <string name="data_user">This page contains important information about your legal rights and obligations when using any of the websites and services belonging to the Company. The following is a collection of the generally-applicable terms of use across our apps and services, whilst specific provisions are included in the terms of use of the relevant Company’s website or service and may be accessed via the links provided below:</string>
    <string name="sms_content">This page contains important information about your legal rights and obligations when using any of the websites and services belonging to the Company. The following is a collection of the generally-applicable terms of use across our apps and services, whilst specific provisions.</string>
    <string name="location_content">This page contains important information about your legal rights and obligations when using any of the websites and services belonging to the Company. The following is a collection of the generally-applicable terms of use across our apps and services, whilst specific provisions.</string>
    <string name="camera_content">This page contains important information about your legal rights and obligations when using any of the websites and services belonging to the Company. The following is a collection of the generally-applicable terms of use across our apps and services, whilst specific provisions.</string>
    <string name="phone_content">This page contains important information about your legal rights and obligations when using any of the websites and services belonging to the Company. The following is a collection of the generally-applicable terms of use across our apps and services, whilst specific provisions are included in the terms of use of the relevant Company’s website or service and may be accessed via the links provided below:</string>
</resources>